add auto_increment id

--- a/views/partials/user-form.hbs
+++ b/views/partials/user-form.hbs
@@ -1,9 +1,9 @@
-<div class="col-6">
-    <div class="form-floating mb-3">
-        <input type="text" class="form-control" id="floatingInput"  value="{{this.id}}" placeholder="enter id name=" name="id">
-        <label for="floatingInput">Id</label>
-    </div>
-</div>
+<!--<div class="col-6">-->
+<!--    <div class="form-floating mb-3">-->
+<!--        <input type="text" class="form-control" id="floatingInput"  value="{{this.id}}" placeholder="enter id name=" name="id">-->
+<!--        <label for="floatingInput">Id</label>-->
+<!--    </div>-->
+<!--</div>-->
 <div class="col-6">
     <div class="form-floating mb-3">
         <input type="text" class="form-control" id="floatingInput"  value="{{this.name}}"  placeholder="enter name name=" name="name">
